# test-library-rust-cargo

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.cid/: state-github.json  state-gitlab.json
.github/workflows/: cid-main.yml  cid-nightly.yml  cid-pull-request.yml  cid-release.yml
src/: lib.rs
